apps/pic-p26/pic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pic
  labels:
    app: pic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pic
  template:
    metadata:
      labels:
        app: pic
    spec:
      containers:
        - name: pic
          image: ghcr.io/mathisdlmr/pic-p26:3399db9652a624f1166aac072129ae9b9e1b07c3
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
