apps/pic-p26/pic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pic
  namespace: pic
  labels:
    app: pic
spec:
  selector:
    app: pic
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
