apps/pic-p26/pic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pic-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: mdlmr.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pic
                port:
                  number: 80

  tls:
    - hosts:
        - mdlmr.fr
